--- a/uoit/imaginglab/site/index.html
+++ b/uoit/imaginglab/site/index.html
@@ -65,7 +65,8 @@
                         <img style="width: 97px; height: 123px" title="Mehran Ebrahimi" alt="Mehran Ebrahimi" src="images/mehran.jpg"><br>
                     </h3>
                     <div style="font-weight: bold;">Mehran Ebrahimi, PhD</div>
-                    <div>Assistant Professor</div>
+                    <div>Assistant Professor</div>                    <div>Undergraduate Program Director</div>
+                    <div>Applied and Industrial Mathematics</div>
                     <div>Faculty of Science, UOIT</div>
                     <div>2000 Simcoe Street North</div>
                     <div>Oshawa, Ontario</div>
@@ -84,7 +85,7 @@
                     <h3>News and Events</h3>
                     <p class="st">
                         <span class="emph">Graduate students:</span> Imaging Lab is recruiting graduate students. Please send us a description
-                        of your specific research interests and skills.
+                        of your specific research interests and skills.                                                   <a href="people.html" style="text-decoration: underline;"> Visit our current and former lab members!</a>                                                
                     </p>
                     <a class="twitter-timeline" href="https://twitter.com/Imaging_Lab" data-widget-id="702334050803908608" height="400" data-chrome="nofooter noheader">
                         Tweets by @Imaging_Lab
