--- a/drecognizer/index.html
+++ b/drecognizer/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Handwritten Digit Recognition</title>
-    <script type="text/javascript" src="data.js"></script>
+    <script type="text/javascript" src="weights.js"></script>
     <script type="text/javascript" src="app.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
@@ -28,8 +28,8 @@
     <div style="padding-top: 10px; line-height: 1.5">
         Reference: <a href="http://neuralnetworksanddeeplearning.com/chap1.html" target="_blank">Using neural nets to recognize handwritten digits</a><br
         /> Training: MNIST (Mixed National Institute of Standards and Technology) dataset<br /> Input: 784 (28x28 grayscale
-        image) <br /> Hidden Layer: 200 nodes (weights: (784 + 1) x 200) - Activation function: logistic non-linearity <br
-        /> Output Layer: 10 nodes (weights: (200 + 1) x 10) - Classifier: softmax <br />
+        image) <br /> Hidden Layer: 200 nodes (weights: (784 + 1) x 200) - Activation function: Sigmoid <br
+        /> Output Layer: 10 nodes (weights: (200 + 1) x 10) - Classifier: Softmax <br />
     </div>
 </body>
 
