--- a/uoit/imaginglab/site/publications.html
+++ b/uoit/imaginglab/site/publications.html
@@ -168,7 +168,7 @@
                     if (p.bibtex) {
                         (function () {
                             var bibtex = p.bibtex.replace(/\n/ig, "<br/>");
-                            var bibtexLink = $('<a href="javascript:void(0)" title="Bibtex"> [Bibtex] </a>').appendTo(links);
+                            var bibtexLink = $('<span> <a style="cursor:pointer" title="Bibtex">[Bibtex]</a> </span>').appendTo(links);
                             var bintexContent = $('<div>').addClass('bibtex').appendTo(links);
 
                             bibtexLink.click(function () {
