--- a/index.html
+++ b/index.html
@@ -130,9 +130,8 @@
                                     EdgeConnect: Generative Image Inpainting with Adversarial Edge Learning</a>
                             </h3>
                             <div class="article-style" itemprop="articleBody">
-                                A "lines first, color next" image inpainting model inspired by artists work.
-                                <br />
-                                Submitted to the IEEE Conference on Computer Vision and Pattern Recognition (CVPR) 2019
+                                <span>A "lines first, color next" image inpainting model inspired by artists work.</span>
+                                Submitted to the IEEE Conference on Computer Vision and Pattern Recognition 2019 (CVPR). 
                             </div>
                             <div class="stream-meta article-metadata">
                                 <div itemprop="author">
@@ -179,7 +178,7 @@
                                 <div class="article-style" itemprop="articleBody">
                                     Springers Lecture Notes in Computer Science, volume 10945, pp. 85-94, 
                                     Proceedings of tenth international conference on Articulated Motion and Deformable Objects (AMDO),
-                                    Palma, Mallorca, Spain.
+                                    <span>Palma, Mallorca, Spain.</span>
                                 </div>
                                 <div class="stream-meta article-metadata">
                                     <div itemprop="author">
@@ -226,10 +225,10 @@
                                     </a>
                                 </h3>
                                 <div class="article-style" itemprop="articleBody">
-                                    ICIAR 2018 Grand Challenge on BreAst Cancer Histology images (BACH)
-                                    <br />
-                                    Springers Lecture Notes in Computer Science, volume 10945, pp. 85-94, Proceedings of tenth 
-                                    international conference on Articulated Motion and Deformable Objects (AMDO), Palma, Mallorca, Spain.
+                                    <span>ICIAR 2018 Grand Challenge on BreAst Cancer Histology images (BACH).</span>
+                                    Springers Lecture Notes in Computer Science, volume 10945, pp. 717-726. Proceedings
+                                    of International Conference on Image Analysis and Recognition (ICIAR), 
+                                    <span>Póvoa de Varzim, Portugal.</span>
                                 </div>
                                 <div class="stream-meta article-metadata">
                                     <div itemprop="author">
@@ -276,8 +275,10 @@
                                     </a>
                                 </h3>
                                 <div class="article-style" itemprop="articleBody">
-                                    Effect of social media on the process of opinion formation in a human population 
-                                    modeled as an external field in the dynamics of the two-dimensional Sznajd model.
+                                    <span>
+                                        Effect of social media on the process of opinion formation in a human population 
+                                        modeled as an external field in the dynamics of the two-dimensional Sznajd model.
+                                    </span>
                                 </div>
                                 <div class="stream-meta article-metadata">
                                     <div itemprop="author">
