--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@
                                 </a>
                             </li>
                             <li>
+                                <a itemprop="sameAs" href="https://www.linkedin.com/in/knazeri/" target="_blank" rel="noopener">
+                                    <i class="fab fa-linkedin big-icon"></i>
+                                </a>
+                            </li>
+                            <li>
                                 <a itemprop="sameAs" href="https://github.com/knazeri" target="_blank" rel="noopener">
                                     <i class="fab fa-github big-icon"></i>
                                 </a>
