--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                             </div>
                             <div class="stream-meta article-metadata">
                                 <div itemprop="author">
-                                    Kamyar Nazeri, Eric Ng, Tony Joseph, Faisal Qureshi, Mehran Ebrahimi
+                                    Kamyar Nazeri, Eric Ng, Tony Joseph, Faisal Z. Qureshi, Mehran Ebrahimi
                                 </div>
                             </div>
                             <div class="btn-links">
