--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                         <ul class="network-icon" aria-hidden="true">
                             <li>
-                                <a itemprop="sameAs" target="_blank" href="contents/kamyar_nazeri.pdf">
+                                <a itemprop="sameAs" target="_blank" href="contents/kamyar_nazeri_cv.pdf">
                                     <i class="ai ai-cv big-icon"></i>
                                 </a>
                             </li>
