--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                             <h2 itemprop="name">Kamyar Nazeri</h2>
                             <h3 itemprop="jobTitle">Graduate Research Assistant</h3>
                             <h6 itemprop="worksFor">
-                                <span itemprop="name">University of Ontario Institute of Technology</span>
+                                <span itemprop="name">Ontario Tech University</span>
                                 <div>kamyar.nazeri_at_uoit.ca</div>
                             </h6>
                         </div>
@@ -70,7 +70,7 @@
                     <h1 id="biography"></h1>
 
                     <p>
-                        I am a MSc. student under the supervision of Mehran Ebrahimi and a member of <a href="http://imaginglab.ca/" target="_blank">ImagingLab</a> in the Modeling and Computational Science graduate program at UOIT. 
+                        I am a MSc. student under the supervision of Mehran Ebrahimi and a member of <a href="http://imaginglab.ca/" target="_blank">Imaging Lab</a> in the Modeling and Computational Science graduate program at Ontario Tech. 
                         I have a solid background and work experience in computer science and I've been writing programs for the past 20 years. My research interests mainly lie in 
                         the areas of computer vision, image processing, deep learning, and generative models. In particular, I have been working on structured deep learning for 
                         image enhancement, image inpainting, super-resolution, and image registration.
@@ -167,6 +167,50 @@
                         <div class="ml-2">
                             <a href="https://arxiv.org/abs/1901.00212" target="_blank">
                                 <img src="contents/images/edge_connect.png" >
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="media stream-item">
+                        <div class="media-body">
+
+                            <h3 class="article-title mb-0 mt-0" itemprop="name">
+                                <a href="https://arxiv.org/abs/1904.09527" itemprop="url">
+                                    Automatic Temporally Coherent Video Colorization</a>
+                            </h3>
+                            <div class="article-style" itemprop="articleBody">
+                                <span>Line art frames video colorization for anime production.</span>
+                            </div>
+                            <div class="stream-meta article-metadata">
+                                <div itemprop="author">
+                                    Harrish Thasarathan, Kamyar Nazeri, Mehran Ebrahimi
+                                </div>
+                            </div>
+                            <div class="btn-links">
+                                <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/pdf/1904.09527.pdf"
+                                    target="_blank" rel="noopener">
+                                    PDF
+                                </a>
+                                <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="https://arxiv.org/abs/1904.09527"
+                                    target="_blank">
+                                    arXiv
+                                </a>
+                                <a class="btn btn-outline-primary my-1 mr-1 btn-sm" href="javascript:$('#bibtex_tcvc').slideToggle()">
+                                    bibtex
+                                </a>
+                            </div>
+                            <pre id="bibtex_tcvc" class="bibtex">
+                                    @article{thasarathan2019automatic,
+                                    &nbsp;&nbsp;title={Automatic Temporally Coherent Video Colorization},
+                                    &nbsp;&nbsp;author={Thasarathan, Harrish and Nazeri, Kamyar and Ebrahimi, Mehran},
+                                    &nbsp;&nbsp;journal={arXiv preprint arXiv:1904.09527},
+                                    &nbsp;&nbsp;year={2019},
+                                }
+                            </pre>
+                        </div>
+                        <div class="ml-2">
+                            <a href="https://arxiv.org/abs/1904.09527" target="_blank">
+                                <img src="contents/images/tcvc.png" >
                             </a>
                         </div>
                     </div>
