--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                                 <li>
                                     <i class="fa-li fas fa-graduation-cap"></i>
                                     <div class="description">
-                                        <p class="course">BSc. in Electrical Engineering, 2003</p>
+                                        <p class="course">BSc. in Electrical Engineering</p>
                                         <p class="institution">Isfahan University of Technology</p>
                                     </div>
                                 </li>
