--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
                         <img class="portrait" src="contents/images/portrait.png" itemprop="image" alt="Avatar">
                         <div class="portrait-title">
                             <h2 itemprop="name">Kamyar Nazeri</h2>
-                            <h3 itemprop="jobTitle">Graduate Research Assistant</h3>
+                            <h3 itemprop="jobTitle">Principal Software Architect</h3>
                             <h6 itemprop="worksFor">
-                                <span itemprop="name">Ontario Tech University</span>
-                                <div>kamyar.nazeri_at_uoit.ca</div>
+                                <span itemprop="name">Harris Computer Corporation</span>
+                                <div>kamyar.nzr<span class="jobTitle">_at_</span>gmail.com</div>
                             </h6>
                         </div>
                         <ul class="network-icon" aria-hidden="true">
@@ -69,23 +69,15 @@
                     <h1 id="biography"></h1>
 
                     <p>
-                        I am a MSc. student under the supervision of Mehran Ebrahimi and a member of <a href="http://imaginglab.ca/" target="_blank">Imaging Lab</a> in the Modeling and Computational Science graduate program at Ontario Tech. 
-                        I have a solid background and work experience in computer science and I've been writing programs for the past 20 years. My research interests mainly lie in 
-                        the areas of computer vision, image processing, deep learning, and generative models. In particular, I have been working on structured deep learning for 
-                        image enhancement, image inpainting, super-resolution, and image registration.
+                        I am a multidisciplinary software architect, curently working at <a href="https://www.harriscomputer.com/" target="_blank">Harris Computer Corporation</a>, with a professional tenure spanning over a decade and a half and proven expertise in developing enterprise-level distributed applications. 
+                        <br /><br />
+                        I am a MSc. graduate from OntarioTech's Modeling and Computational Science program and a former member of <a href="http://imaginglab.ca/" target="_blank">Imaging Lab</a>. 
+                        My research interests mainly lie in the areas of computer vision, image processing, deep learning, and generative models. 
+                        <br />
+                        I actively contribute to the community through my involvement in open-source and open-access initiatives (<a href="https://arxiv.org/search/cs?searchtype=author&query=Nazeri%2C+Kamyar" target="_blank">arXiv</a>, <a href="https://github.com/knazeri" target="_blank">GitHub</a>, <a href="https://stackoverflow.com/users/1041321/kamyar-nazeri" target="_blank">Stackoverflow</a>).
                     </p>
 
                     <div class="row">
-
-                        <div class="col-md-4">
-                            <h3>Interests</h3>
-                            <ul class="ul-interests">
-                                <li>Computer Vision</li>
-                                <li>Image Processing</li>
-                                <li>Deep Learning</li>
-                                <li>Generative Models</li>
-                            </ul>
-                        </div>
 
                         <div class="col-md-8">
                             <h3>Education</h3>
