--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
                                 </a>
                             </li>
                             <li>
-                                <a itemprop="sameAs" href="https://scholar.google.com/citations?user=rld6wTAAAAAJ&hl=en" target="_blank" rel="noopener">
-                                    <i class="ai ai-google-scholar big-icon"></i>
+                                <a itemprop="sameAs" href="https://x.com/knazeri" target="_blank" rel="noopener">
+                                    <i class="fab fa-X big-icon"></i>
                                 </a>
                             </li>
                             <li>
-                                <a itemprop="sameAs" href="https://twitter.com/knazeri" target="_blank" rel="noopener">
-                                    <i class="fab fa-twitter big-icon"></i>
+                                <a itemprop="sameAs" href="https://scholar.google.com/citations?user=rld6wTAAAAAJ&hl=en" target="_blank" rel="noopener">
+                                    <i class="ai ai-google-scholar big-icon"></i>
                                 </a>
                             </li>
                             <li>
