--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <img class="portrait" src="contents/images/portrait.png" itemprop="image" alt="Avatar">
                         <div class="portrait-title">
                             <h2 itemprop="name">Kamyar Nazeri</h2>
-                            <h3 itemprop="jobTitle">Principal Software Architect</h3>
+                            <h3 itemprop="jobTitle">Principal Software Engineer</h3>
                             <h6 itemprop="worksFor">
                                 <span itemprop="name">Harris Computer Corporation</span>
                                 <div>kamyar.nzr<span class="jobTitle">_at_</span>gmail.com</div>
@@ -69,7 +69,7 @@
                     <h1 id="biography"></h1>
                     <br>
                     <p>
-                        I am a multidisciplinary software architect, curently working at <a href="https://www.harriscomputer.com/" target="_blank">Harris Computer Corporation</a>, with a professional tenure spanning over a decade and a half and proven expertise in developing enterprise-level distributed applications. 
+                        I am a multidisciplinary software engineer, curently working at <a href="https://www.harriscomputer.com/" target="_blank">Harris Computer Corporation</a>, with a professional tenure spanning over a decade and a half and proven expertise in developing enterprise-level distributed applications. 
                         <br />
                         I am a MSc. graduate from OntarioTech's Modeling and Computational Science program and a former member of <a href="http://imaginglab.ca/" target="_blank">Imaging Lab</a>. 
                         My research interests mainly lie in the areas of computer vision, image processing, deep learning, and generative models. 
