--- a/cv/index.html
+++ b/cv/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-JYPPH5BNK3"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-JYPPH5BNK3');
+    </script>
+
     <meta charset="UTF-8">
     <meta http-equiv="refresh" content="0;url=kamyar_nazeri_cv.pdf">
     <title>Redirecting...</title>
